# Cpp-exercises

./: .gitignore  .gitmodules
CG/Clock/: build.py
CG/Clock/scripts/: CMakeLists.txt  build.bat  build.ps1  run.bat  setup.ps1
CG/Clock/src/: main.cpp
CG/Open GL/Atividade-1/: README.md
CG/Open GL/Atividade-1/0-HelloWorld/: main.cpp  run.bat
CG/Open GL/Atividade-1/1-Stick/: build.bat  main.cpp
CG/Open GL/Atividade-1/2-Flag/: CMakeLists.txt  build.sh  main.cpp  run.sh
CMake/01_build_dir/: main.cpp  run.sh
CMake/02_cmake_tools/: main.cpp
CMake/hello/: CMakeLists.txt  run.sh
Compilers/: main.cpp  parser.hpp
Data-Structures/: run.sh
Data-Structures/Graphs/: graph.cpp  graph.hpp  main.cpp
Data-Structures/concrete/array/: array.hpp  main.cpp  makefile  run.sh
Data-Structures/concrete/graph/: graph.txt  main.cpp  makefile  run.sh
Data-Structures/generic/array/: Array.hpp  main.cpp  makefile  run.sh
Data-Structures/generic/array/array_list/: ArrayList.hpp  main.cpp
Data-Structures/queue/: main.cpp  makefile  queue.cpp  queue.hpp  run.sh
Data-Structures/utils/: parser.cpp  parser.hpp
Hello-World/Hello/: main.cpp
Hello-World/HelloCMake/: CMakeLists.txt  run.sh
Hello-World/ex01_log/: main.cpp
SFML/Hello-World/CLI/: run.sh
SFML/Hello-World/CMake/: CMakeLists.txt  run.sh
SFML/Hello-World/CMake/src/: main.cpp
SFML/Hello-World/Make/: makefile  sfml-app
